--- a/code/Rover_Project_Test_Notebook.ipynb
+++ b/code/Rover_Project_Test_Notebook.ipynb
@@ -304,15 +304,12 @@
     "def sample_thresh(img):\n",
     "    \n",
     "    # Create an array of zeros same xy size as img, but single channel\n",
-    "    low_yellow = np.array([20, 100, 100], dtype = \"uint8\")\n",
-    "    high_yellow = np.array([255, 255, 255], dtype = \"uint8\")\n",
-    "    \n",
-    "    # Threshold the image to get only yellow colors\n",
-    "    img_hsv = cv2.cvtColor(img, cv2.COLOR_RGB2HSV,3)\n",
-    "    \n",
-    "    mask_sample = cv2.inRange(img_hsv, low_yellow, high_yellow)\n",
+    "    low_yellow = np.array([100, 100, 0], dtype = \"uint8\")\n",
+    "    high_yellow = np.array([190, 190, 50], dtype = \"uint8\")\n",
+    "\n",
+    "    sample_select = cv2.inRange(img, low_yellow, high_yellow)\n",
     "    # Return the binary image\n",
-    "    return mask_sample\n",
+    "    return sample_select\n",
     "\n",
     "fig = plt.figure(figsize=(12,3))\n",
     "plt.subplot(131)\n",
@@ -458,6 +455,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "inputHidden": false,
     "outputHidden": false
    },
