--- a/code/Rover_Project_Test_Notebook.ipynb
+++ b/code/Rover_Project_Test_Notebook.ipynb
@@ -568,7 +568,7 @@
     "\n",
     "    #get the minimum of both \n",
     "    pitch = min(abs(data.pitch[data.count]), abs(data.pitch[data.count] -360))\n",
-    "    roll = min(abs(data.roll[data.count]), abs(data.roll[data.count]))\n",
+    "    roll = min(abs(data.roll[data.count]), abs(data.roll[data.count]-360))\n",
     "    if(abs(pitch) < MAXPITCH and abs(roll) < MAXROLL):\n",
     "        data.worldmap[obstacle_y_world, obstacle_x_world, 0] += 1\n",
     "        data.worldmap[sample_y_world, sample_x_world, 1] += 1\n",
